# Knowledge-Represenation

./: .env  .gitignore  README.md  pyproject.toml
.claude/: .claude.md
data-structures/hypergraphs/: base.py
docs/guidelines/: quick-start.md  semantic-modeling-guidelines.md
examples/domain-specific/: README.md  standards_research.md
examples/domain-specific/WAR/: README.md  WAR_extended.owl  war_simple.owl
examples/domain-specific/finance/: accounts.ttl  assets.ttl  budgets.ttl  instruments.ttl  liabilities.ttl  organization.ttl  portfolios.ttl  transactions.ttl
examples/domain-specific/smart-systems/: core.ttl  devices.ttl  rooms.ttl  sensors.ttl
examples/domain-specific/social-bias/: biases.ttl  demographics.ttl  mitigation.ttl
examples/domain-specific/sports/: Untitled.jsonld  Untitled.properties
examples/knowledge-graphs/: README.md
examples/ontologies/: workflow-ontology.rdf
examples/ontologies/jsonld/: ecommerce-example.jsonld
examples/ontologies/turtle/: agent-ontology.ttl
templates/: ontology-template.md
tools/: README.md
use-cases/: README.md
