[project]
name = "knowledge-represenation"
version = "0.1.0"
description = "Ontology alignment system with LLM integration for FIBO, gUFO, and SAREF frameworks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rdflib>=7.1.1",
    "litellm>=1.80.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]
